--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,14 +18,14 @@
         <div class="card login-form">             
             <div class="card-body">
               <h2 class="card-title mb-5">Welcome Back</h2>
-              <form>
+              <form method="POST" action="/login"> 
                 <div class="mb-4">
                   <label for="exampleInputEmail1" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                  <input name = "email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" >
+                  <input name = "password" type="password" class="form-control" id="exampleInputPassword1" >
                 </div>
 
                 <div class="d-flex justify-content-between">
