--- a/style.css
+++ b/style.css
@@ -1,123 +1,58 @@
-*{
-    font-family: 'Poppins', sans-serif;
-}
-
-.login{
-    height: 100vh;
-    background: #d9d9d9;
-}
-
-.header h1{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 35px;
-    line-height: 52px;
-    /* identical to box height */
-    color: #000000;
-}
-
-.header p{  
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 22px;
-    /* identical to box height */
-    color: #000000;
-    margin-bottom: 13px;
-}
-
-.login-form label{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 38px;
-    /* identical to box height */
-    color: #000000;
-    margin-top: 8px;
-}
-
-.login-form input{
-    background: #ffff;
-    border: 1px solid #000000;
-    border-radius: 10px;
-    margin-bottom: 15px;
-}
-
-.login-form a{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 22px;
-    /* identical to box height */
-    color: #000000;
-
-}
-
-.login-form .sign-in{
-    width: 100%;
-    height: 60px;
-    background-color: #ffff;
-    border-radius: 10px;
-    color: black;
-    border: 0px;
-    margin-top: 19px;
-    margin-bottom: 10px;
-}
-
-.login-form span{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 22px;
-    margin-top: 10px;
-    /* identical to box height */
-
-
-    color: #000000;
-}
-.login-form span a{
-    font-weight: 600;
-}
-
-.login-right img{
+body ,html {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    background-color:white;
     height: 100%;
-    width: 100%;
+    font-weight: 700;
 }
 
-/*=============== Register ===================*/
-
-.registration-form input{
-    background: #ffff;
-    border: 1px solid #000000;
-    border-radius: 10px;
-    margin-bottom: 5px;
+.container {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
 }
 
-.registration-form button{
-    border-radius: 10px;
+.login-form {
+    height: 500px;
+    width: 430px;
+    padding: 0 35px;
+    background-color:#e2e2e2;
+    border: none;
+    border-radius: 35px;
+}
+
+input[type="email"],
+input[type="password"] {
+    border-radius: 20px;
+    
+}
+
+
+
+.btn-login {
+    background-color: white;
+    height: 35px;
+    font-weight: 700;
+    border-radius: 20px;
+}
+
+
+
+.link {
+    color:black;
+    text-decoration: none;
+}
+
+.link:hover {
     color: black;
+    text-decoration: none;
 }
 
-.registration-form .signup{
-    width: 100%;
-    height: 60px;
-    background-color: #ffff;
-    border-radius: 10px;
-    color: black;
-    border: 0px;
-    margin-top: 5px;
-    margin-bottom: 10px;
+
+.register{
+    text-align: center;
 }
 
-.registration-form label{
-    font-style: bold;
-    font-weight: 500;
-    font-size: 15px;
-    /* identical to box height */
-    color: #000000;
-}
 
-.registration-form a{
-    color: black;
-    font-weight: 400;
-}
