--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,65 +1,63 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<!-- <!doctype html>
+<!-- <html lang="en">
+  <head> -->
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <!-- My Style-->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 
-    <title>Form Login</title>
+    <!-- fonts -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <title>E-Buddy</title>
+  </head>  -->
 
-  </head>
-  <body>
-    <!-- // TODO:tambahkan user name disini -->
-    <div class="container">
-        <div class="card login-form">             
-            <div class="card-body">
-              <h2 class="card-title mb-5">Welcome Back</h2>
-              <form method="POST" action="/login"> 
-                <div class="mb-4">
-                  <label for="exampleInputEmail1" class="form-label">Email</label>
-                  <input name = "email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input name = "password" type="password" class="form-control" id="exampleInputPassword1" >
-                </div>
+  <!-- <body> -->
+    <section class="login d-flex">
+        <div class="login-left w-50 h-100">
+          <div class="row justify-content-center align-items-center h-100">
+            <div class="col-6">
+              <div class="header">
+                <h1>Welcome Back</h1>
+                <p>Selamat datang jangan lupa isi data ya!</p>
+              </div>
+              
+              <form method="POST" action="/login">
+              <div class="login-form">
+              <!-- Login -->
+                <label for="email" class="form-label">Email</label>
+                <input name="email" type="email" class="form-control" id="email" placeholder="Masukan Email">
 
-                <div class="d-flex justify-content-between">
-                    <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                    </div>
-
-                    <div>
-                        <a href="" class="link">Forgot Password ?</a>
-                    </div>
-                </div>
-
-                <div class="d-grid mt-5">
-                    <button type="submit" class="btn btn-default btn-login">Login</button>
-                </div>
-
-                <div class="register mt-3">
-                    <label >Belum punya akun ? <a href="" class="link">Sing up</a></label>
+              <!-- password -->
+                <label for="password" class="form-label">Password</label>
+                <input name="password" type="password" class="form-control" id="email" placeholder="Masukan Password">
+                <!-- forgot password -->
+                <a href="#" class="text-decoration-none text-center">Forgot Password?</a>
+                <!-- Button -->
+                <div class="text-center">
+                  <button class="sign-in">Sign In</button>
+                  <span class="d-inline">Belum punya akun? <a href="#" class="signup d-inline text-decoration-none">Ayo bikin akun</a></span>
                 </div>
               </form>
+              </div>
             </div>
-          </div>
-    </div>
+          </div>  
+        </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+        <div class = "login-right bg-primary w-50 h-100">
+          <img src="gambar/login.jpg" alt="">
+        </div>
+    </section>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
-    -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
-</html>
+</html> -->
