--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,12 +36,11 @@
               <!-- password -->
                 <label for="password" class="form-label">Password</label>
                 <input name="password" type="password" class="form-control" id="email" placeholder="Masukan Password">
-                <!-- forgot password -->
-                <a href="#" class="text-decoration-none text-center">Forgot Password?</a>
+     
                 <!-- Button -->
                 <div class="text-center">
                   <button class="sign-in">Sign In</button>
-                  <span class="d-inline">Belum punya akun? <a href="#" class="signup d-inline text-decoration-none">Ayo bikin akun</a></span>
+                  <span class="d-inline">Belum punya akun? <a href="/register" class="signup d-inline text-decoration-none">Ayo bikin akun</a></span>
                 </div>
               </form>
               </div>
