--- a/views/masatubuh.ejs
+++ b/views/masatubuh.ejs
@@ -12,7 +12,7 @@
     <title>E-Buddy</title>
   </head>
   <body> -->
-    <div class="container-calculator">
+    <!-- <div class="container-calculator">
       <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">E-Buddy</a>
@@ -35,7 +35,7 @@
             </div>
         </div>
       </nav>
-    </div>
+    </div> -->
   
 
     <section class="login d-flex position-fixed">
@@ -60,9 +60,9 @@
                 </div>
                 <% if (typeof hasil !== 'undefined' ) { %>  
                   <div class="alert alert-dark" role="alert">
-                      <% let angka = hasil.toFixed(2)%>
+            
 
-                      <%= angka %>  
+                      <%= hasil %>  
                   </div>
                   <%}%>
                  
