--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -18,6 +18,11 @@
           <div class="justify-content-end">
             <a href="/login" class="text-decoration-none">Login</a>
             <a href="/register" class="signup_button text-decoration-none">SignUp</a>
+            <a>
+            <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
+               <button>Logout</button>
+            </form>
+            </a>
           </div>
         </div>
     </div>
