--- a/views/masatubuh.ejs
+++ b/views/masatubuh.ejs
@@ -1,43 +1,44 @@
-<!-- <!doctype html> -->
-<!-- <html lang="en"> -->
-  <!-- <head> -->
-    <!-- Required meta tags -->
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-
-    <title>E-Buddy</title>
-  </head>
-  <body> -->
-    <!-- <div class="container-calculator">
-      <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">E-Buddy</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
-                <a class="nav-link" href="#">Menu</a>
-                <a class="nav-link" href="#">Video</a>
-                <a class="nav-link " href="#">Calculator</a>
-              </div>
-            </div>
-            <div class="nav">
-              <div class="justify-content-end">
-                <a href="#" class="text-decoration-none">Login</a>
-                <a href="#" class="signup_button text-decoration-none">SignUp</a>
-              </div>
-            </div>
+<div class="container-calculator">
+  <nav class="navbar fixed-top navbar-expand-lg bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">E-Buddy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/homepage">Dashboard</a>
+            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="/video2">Video</a>
+            <a class="nav-link " href="/masatubuh">Calculator</a>
+            <a class="nav-link " href="/tampilan">IMT</a>
+          </div>
         </div>
-      </nav>
-    </div> -->
-  
-
+        <div class="nav">
+          <div class="justify-content-end">
+            <a>
+            <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
+               <button>Logout</button>
+            </form>
+            </a>
+          </div>
+        </div>
+    </div>
+  </nav>
+</div>
+        <div class="nav">
+          <div class="justify-content-end">
+        
+            <a>
+            <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
+               <button>Logout</button>
+            </form>
+            </a>
+          </div>
+        </div>
+    </div>
+  </nav>
+</div>
     <section class="login d-flex position-fixed">
       <div class="container-left w-50 h-100">
         <div class="row justify-content-center align-items-center h-100">
