--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 
 .login{
     height: 100vh;
-    background: #d9d9d9;
+
 }
 
 .header h1{
@@ -122,6 +122,8 @@
     font-weight: 400;
 }
 
+/*============calculator===============*/
+
 .container-calculator a{
     margin-left: 10px;
     margin-right: 10px;
@@ -166,6 +168,8 @@
     margin-top: 10px;
 }
 
+/*============dashboard============*/
+
 .container-isian h1{
     margin-top: 60px;
 }
@@ -198,7 +202,9 @@
 
 .container-bawah p{
     margin-top: 10px;
-} 
+}
+
+/*===========Profile Card============*/
 
 .ibm{
     height: 100vh;
@@ -213,23 +219,126 @@
 }
 
 .ibm .container-ibm input{
-     border-radius: 20px;
+    border-radius: 20px;
 }
 
 .ibm .container-ibm button{
     width: 30%;
     margin-top: 15px;
     border-radius: 10px;
+
 }
 
-
-
-.card{
-    margin-top: 30px;
+.kartu{
+    margin-top: 100px;
 }
 
-.card .container-card .tombol-card a{
+.kartu .container-card .tombol-card a{
     margin-left: 10px;
     color: #000000;
 }
+
+/*=====================Hello Page=====================*/
+
+.hello_page{
+    height: cover;
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(/gambar/hello_page.jpg);
+    background-size: cover;
+}
+
+.hellopage{
+    padding-top: 200px;
+    padding-bottom: 150px;
+    color: black;
+}
+
+.hellopage p{
+    margin-top: 10px;
+    padding-left: 60px;
+}
+
+.hellopage button{
+    border-radius: 10px;
+    width: 200px;
+    height: 60px;
+    border: 2px black;
+}
+
+.hellopage .Login_hellopage{
+    margin-top: 10px;
+}
+
+.container_info{
+    padding-top: 50px;
+    padding-bottom: 45px;
+}
+
+.container_info img{
+    padding-bottom: 20px;
+}
+
+.container_asal{
+    background-color: #D9D9D9;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.container-tengah{
+    background-color: #ffff;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.container-tengah .bagian-1 h4{
+    margin-right: 60px;
+}
+
+.bagian-1 button{
+    margin-right: 122px;
+}
+
+.container-tengah button{
+    border-radius: 10px;
+    width: 200px;
+    height: 60px;
+    border: 2px black;
+}
+
+.container-tengah .bagian-2 h4, button{
+    margin-left: 60px;
+}
+
+.footer{
+    padding-top: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+    margin-bottom: 50px;
+}
+
+.footer button{
+    margin-top: 20px;
+    border-radius: 10px;
+    width: 200px;
+    height: 60px;
+    border: 2px black;
+}
+
+/*=============video==================*/
+
+.container-pilih{
+    margin-top: 60px;
+}
+
+.container-pilih .card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/*=================menu===================*/
+
+.info{
+    padding-top: 100px;
+}
+
+
+
 
