--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,31 @@
-
+<div class="container-calculator">
+    <nav class="navbar fixed-top navbar-expand-lg bg-light">
+      <div class="container">
+          <a class="navbar-brand" href="#">E-Buddy</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/homepage">Dashboard</a>
+              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="/video2">Video</a>
+              <a class="nav-link " href="/masatubuh">Calculator</a>
+              <a class="nav-link " href="/tampilan">IMT</a>
+            </div>
+          </div>
+          <div class="nav">
+            <div class="justify-content-end">
+              <a>
+              <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
+                 <button>Logout</button>
+              </form>
+              </a>
+            </div>
+          </div>
+      </div>
+    </nav>
+  </div>
     <div class="container-isian container-fluid">
 
         <div class="header text-center justify-content-center">
