--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,3 @@
-<!-- <!doctype html>
-<!-- <html lang="en">
-  <head> -->
-    <!-- Required meta tags -->
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <!-- My Style-->
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-
-    <!-- fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <title>E-Buddy</title>
-  </head>  -->
-
-  <!-- <body> -->
     <section class="login d-flex">
         <div class="login-left w-50 h-100">
           <div class="row justify-content-center align-items-center h-100">
@@ -26,6 +6,15 @@
                 <h1>Welcome Back</h1>
                 <p>Selamat datang jangan lupa isi data ya!</p>
               </div>
+              <% if (typeof error !== 'undefined'){ %>
+                <div class="alert alert-danger" role="alert">
+                  <ul>
+                     <%=error%>
+
+                  </ul>
+                  
+                </div>
+              <% } %> 
               
               <form method="POST" action="/login">
               <div class="login-form">
