--- a/views/register.ejs
+++ b/views/register.ejs
@@ -66,7 +66,7 @@
                   </div>
 
                   <div class="text-center">
-                    <span class="d-inline">Sudah punya akun? <a href="#" class="d-inline text-decoration-none">Log in</a></span>
+                    <span class="d-inline">Sudah punya akun? <a href="/login" class="d-inline text-decoration-none">Log in</a></span>
                   </div>
                 </form>
                     
